# Cyrene

./: .gitignore  Cargo.toml  LICENSE
docs/: adapter-design.md  core-protocol.md  design.md  installer.md
src/adapter/: README.md
src/adapter/codex/cyrene-memory/: .mcp.json  package.json
src/adapter/codex/cyrene-memory/.codex-plugin/: plugin.json
src/adapter/codex/cyrene-memory/hooks/: hooks.json
src/adapter/codex/cyrene-memory/lib/: cache.mjs  config.mjs  core-client.mjs  matching.mjs  tools.mjs
src/adapter/codex/cyrene-memory/scripts/: mcp-server.mjs  user-prompt-submit.mjs
src/adapter/codex/cyrene-memory/skills/memory/: SKILL.md
src/adapter/codex/cyrene-memory/skills/remember/: SKILL.md
src/adapter/codex/cyrene-memory/test/: config.test.mjs  core-client.test.mjs  hook.test.mjs  mcp-server.test.mjs  tools.test.mjs
src/adapter/pi/: package-lock.json  package.json  tsconfig.json
src/adapter/pi/prompts/: memory.md  remember.md
src/adapter/pi/src/: client.ts  config.ts  extension.ts  session.ts  types.ts
src/adapter/pi/test/: client.test.ts  config.test.ts  extension.test.ts  session.test.ts
src/core/: Cargo.toml
src/core/src/: app.rs  auth.rs  config.rs  domain.rs  embedding.rs  error.rs  lib.rs  main.rs  protocol.rs  search.rs  singleton.rs  storage.rs  transport.rs
